--- a/.env
+++ b/.env
@@ -4,5 +4,7 @@ SEREVER_API=http://localhost:3000/
 GOOGLE_CLIENT_ID=525769559170-a761t54olbkrr87thsugd9mha7lsnpp9.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=edROv1q8AuL5Nhw0AlzPlxsm
 MG_DB=mongodb+srv://postinglistcom:P3L2eAO7qIDTZwDX@cluster0.uapj3bg.mongodb.net/persona
-OPEN_AI=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
+# OPEN_AI=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
+OPEN_AI=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
+
 
